# pytest-directives

./: .codecov.yml  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  tasks.py
.github/workflows/: linters.yml  main.yml  main_branch.yml  publish.yml  pull_requests.yml  unit_tests.yml
example/: example_flow.py
pytest_directives/: pytest_directives.py
pytest_directives/_core/: __init__.py  abc_directive.py  run_strategies.py
pytest_directives/core/: abc_directive.py  run_strategies.py
pytest_directives/core/utils/: devide.py
tests/_core/: conftest.py  test_chain.py  test_directives.py  test_parallel.py  test_sequence.py
tests/core/: conftest.py  test_abc_directive.py  test_chain.py  test_parallel.py  test_sequence.py
tests/pytest_directives/: conftest.py  test_data_paths.py  test_pytest_resolver.py  test_pytest_runnable.py
tests/pytest_directives/test_data/: test_class.py  test_failure.py  test_several_functions.py
tests/pytest_directives/test_data/test_package/: test_inside_package.py
tests/utils/: test_devide.py
