# TODO copyed from pytest
[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=61",
    "setuptools-scm[toml]>=6.2.3",
]

[project]
dynamic = ["version"]
name = "pytest-directives"
description = ""
readme = "README.md"
keywords = [
]
dependencies = [
]

[tool.pytest.ini_options]
addopts = "-v -l -p no:cacheprovider"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"